[package]
name = "flatarray"
version = "0.5.0"
edition = "2021"
authors = ["Simon Théorêt <simonteoret@hotmail.com"]
description = "Fast implementation of SeqEval, a sequence evaluation framework"
license = "MIT"
repository = "https://github.com/SimonTheoret/flatarray"
keywords = ["Datastructure", "Vector", "Array"]
rust-version = "1.78.0" #MSRV
