[package]
name = "flatarray"
version = "1.0.0"
edition = "2021"
authors = ["Simon Théorêt <simonteoret@hotmail.com"]
description = "Implementation of a flattened iterator, that acts as if it still was an iterator of iterator"
license = "MIT"
repository = "https://github.com/SimonTheoret/flatarray"
keywords = ["Datastructure", "Vector", "Array"]
rust-version = "1.78.0" #MSRV

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[features]
serde = []
